5.4.0 -> 5.4.1:
    - jbj: put "devel(libfoo)" deps under RPM_VENDOR_MANDRIVA.
    - proyvind: merge multiarch-utils from mandriva.
    - proyvind: macros: sync with updated python macros from mandriva.
    - proyvind: rpmfc: add internel dep generator helper for kernel modules.
    - provyind: kmod-deps.sh: add dependency extractor from mandriva.
    - proyvind: rpmds: implement devel(libfoo) symlink dependencies from
	Mandriva, but with proper ELF SONAME checking.
    - jbj: mongo: stub-in a /usr/lib/rpm/bin mongo shell wrapper.
    - jbj: spewage: fix: rework sql/json markup to use the EVRD parser.
    - jbj: build: fix: resurrect %description -l XY yet again.
    - jbj: build: fix: attempt arbitrary '%foo' tag iff '%' is seen.
    - jbj: mongo: establish primary/filelists/other/srpm collection names.
    - jbj: mongo: drag-in the test suite. grdfs/replica_sets todo++.
    - jbj: mongo: and re-export the mongo-c-driver through librpmio.vers.
    - jbj: mongo: pull in the gridfs methods from the mongo-c-driver too.
    - jbj: mongo: update mongo-c-driver code, gridfs stil todo++
    - jbj: mongo: stub-in a configurable mongodb:// %_mongodb URI.
    - jbj: autofu: fix: remove --with-js remnants.
    - jbj: autofu: drop --with-js=internal now that JS 1.8.5 is available.
    - mdawkins: i18n update cs.po da.po de.po es.po fi.po fr.po id.po 
		is.po it.po ja.po ko.po nb.po nl.po pa.po pl.po pt.po pt_BR.po 
		ru.po sk.po sl.po sr.po sv.po tr.po uk.po vi.po zh_TW.po
    - proyvind: rpmjs: port to SpiderMonkey 1.8.5 API.
    - proyvind: mandriva: filter overlapping depencies.
    - proyvind: rubygems.rb: add/provide ruby(abi) dependencies for non-gems.
    - proyvind: rpmfc: add classifiers for gstreamer plugins & dep generator.
    - proyvind: use pythoneggs.py for python deps generated by internal generator.
    - proyvind: rpmfc: enable ruby file classifier & internal dep generator.
    - devzero2000: misread the review, repost as the original patch